09-modification of all the CSS with the correction of the semantics

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -75,12 +75,12 @@
     </header>
     <main class="flex-shrink-0">
       <div class="accueil my-2">
-        <h1 class="text-center">Accueil</h1>
+        <h1>Accueil</h1>
         <div class="wrapper mx-1">
           <article>
             <div class="row no-gutters"><!--article happy new year-->
               <div class="col">
-                <section class="new_year mb-2">
+                <section class="new_year">
                   <div class="card">
                     <div class="card-header">Site officiel de l'A.M.C.O <br>F.F.M & Moto Cyclo Occitanie U.F.O.L.E.P</div>
                     <div class="card-body">
@@ -92,7 +92,7 @@
             </div>
             <div class="row no-gutters"> <!--event article--> 
               <div class="col">
-                <section class="event_article mb-2">
+                <section class="event_article">
                   <div class="card">
                     <div class="card-header p-0">
                       <img src="http://ageheureux.a.g.pic.centerblog.net/anniversaire_010.gif" width="35px" height="40px" alt="Image du Blog ageheureux.centerblog.net">
@@ -101,11 +101,11 @@
                     </div>
                     <div class="card-body">
                       <h5 class="card-title py-2">Rencontre sportive</h5>
-                      <p class="card-text mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
+                      <p class="card-text text-justify mb-0 pt-1">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous       rejoindre pour un moment sportif et festive.
                       </p>
-                      <p class="card-text">
+                      <p class="card-text text-center">
                         <strong>Venez nous rejoindre !!!</strong>
-                        <a href="/Index/evenement.html"> <img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px" alt="">  
+                        <a href="/Index/evenement.html"><img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30px" width="30px">  
                         </a>
                       </p>
                     </div>
@@ -113,9 +113,9 @@
                 </section>
               </div>
             </div>
-            <div class="row no-gutters"> 
+            <div class="row no-gutters"> <!--general information--> 
               <div class="col">
-                <section class="general_information mb-2">
+                <section class="general_information ">
                   <div class="card">
                     <div class="card-header text-uppercase ">Information générale</div>
                     <div class="card-body">
@@ -127,13 +127,12 @@
                 </section>
               </div>
             </div>
-
           </article>
         </div>
       </div>
     </main>
   </div>
-  <footer class="footer bg-dark text-light mt-auto ">
+  <footer class="footer bg-dark text-light mt-auto">
     <div class="container pt-2">
       <div class="row justify-content-center">
         <div class="col-6">
