--- a/Index/club.html
+++ b/Index/club.html
@@ -75,12 +75,12 @@
         <h1 class="text-center">Le club</h1>
         <div class="wrapper mx-1">
           <article>
-            <div class="row no-gutters"> 
+            <div class="row no-gutters"> <!--creation club -->
               <div class="col">
                 <section class="creation_club">
                   <div class="card">
                     <div class="card-header text-center">Création du club</div>
-                    <div class="card-body mt-2 pt-2">
+                    <div class="card-body text-justify mt-2 pt-2">
                       <p class="card-text">Le club a été créé en 2001 sous l'appellation MKC, affilié à la Fédération UFOLEP depuis sa création.</p>
                       <p class="card-text">Après plusieurs mutations il est devenu depuis l'Assemblée Générale du 24 Octobre 2009 l'A.M.Q.A.P, fruit de la fusion du club avec des passionnés de Motos Anciennes et de Quad de la basse Ariège.</p>
                     </div>
@@ -88,12 +88,12 @@
                 </section>
               </div>
             </div>
-            <div class="row no-gutters"> 
+            <div class="row no-gutters"> <!--club modification-->
               <div class="col">
                 <section class="modif_club">
                   <div class="card">
                     <div class="card-header text-center">Modification du club</div>
-                    <div class="card-body mt-2 pt-2">
+                    <div class="card-body text-justify mt-2 pt-2">
                       <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
                       <p class="card-text text-decoration-underline">Tarif adhésion club :</p>
                       <p class="card-text"><strong><mark> 20€</strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
@@ -105,12 +105,12 @@
                 </section>
               </div>
             </div>
-            <div class="row no-gutters"> 
+            <div class="row no-gutters"> <!--statuts of club-->
               <div class="col">
                 <section class="statuts_club">
                   <div class="card">
                     <div class="card-header text-center text-danger">📜 Les statuts du club 📜</div>
-                    <div class="card-body">
+                    <div class="card-body ">
                       <ul class="list-group mt-2">
                         <li class="list-group-item"><h5>Président :</h5>
                           <p><b>SAINT-JOLY</b> Jean pierre <a href="mailto:j.pierrejoly@sfr.fr">📧</a></p>
