--- a/Index/contact.html
+++ b/Index/contact.html
@@ -35,7 +35,6 @@
             <div class="row no-gutters"><!--contact page-->
               <div class="col">
                 <section>
-                  <h1 class="text-center my-2 pb-4">Page de contact</h1>
                   <div class="formulaire">
                       <form class="needs-validation pt-1" novalidate>
                         <div class="form-group col-8 m-auto">
@@ -90,7 +89,7 @@
                             <label class="form-check-label" for="vtt_checkbox2">Vtt</label>
                           </div>
                         </div>
-                        <div class="form-group col-10 pt-3">
+                        <div class="form-group pt-2">
                           <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="condition_check" required>
                             <label class="form-check-label" for="condition_check">
