-09 add code scss simplified

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -17,6 +17,9 @@
       <div class="first_banniere">
         <img src="../Annexe/Images/Bannière.jpg" alt="responsive bannière" class="img-fluid" id="bannière_mobile">
       </div>
+      <div class="second_banniere">
+        <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid ">
+      </div>
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="Nav">
         <div class="row no-gutters m-auto ">
           <div class="col">
