--- a/Index/club.html
+++ b/Index/club.html
@@ -72,7 +72,7 @@
     </header>
     <main class="flex-shrink-0">
       <div class="club my-2">
-        <h1 class="text-center">Le club</h1>
+        <h1>Le club</h1>
         <div class="wrapper mx-1">
           <article>
             <div class="row no-gutters"> <!--creation club -->
