--- a/Index/contact.html
+++ b/Index/contact.html
@@ -29,7 +29,7 @@
     </header>
     <main class="flex-shrink-0">
       <div class="contact_page my-2">
-        <h1 class="text-center">Contact</h1>
+        <h1>Contact</h1>
         <div class="wrapper mx-1">
           <article>
             <div class="row no-gutters"><!--contact page-->
