--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -64,7 +64,7 @@
     </header>
     <main class="flex-shrink-0">
       <div class="event my-2">
-        <h1 class="text-center">Evènements du club</h1>
+        <h1>Evènements du club</h1>
         <div class="wrapper mx-1">
           <article>
             <div class="row no-gutters"> <!--event description-->
