--- a/Index/photos.html
+++ b/Index/photos.html
@@ -72,7 +72,7 @@
     </header>
     <main class="flex-shrink-0">
       <div class="pictures my-2">
-        <h1 class="text-center">Photos</h1>
+        <h1>Photos</h1>
         <div class="wrapper mx-1">
           <article>
             <div class="row no-gutters"> 
