09-adjustment for tablette & landscape finished

--- a/Index/conditions.html
+++ b/Index/conditions.html
@@ -21,7 +21,7 @@
     </header>
     <main class="flex-shrink-0">
       <div class="conditions my-2">
-        <h1>conditions générales d'utilisation</h1>
+        <h1>Conditions générales d'utilisation</h1>
         <div class="wrapper mx-1">
           <article>
             <!--article 1-->
