modification for Desktop finished

--- a/Index/conditions.html
+++ b/Index/conditions.html
@@ -19,7 +19,7 @@
         <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid ">
       </div>
     </header>
-    <main class="flex-shrink-0">
+    <main>
       <div class="conditions my-2">
         <h1>Conditions générales d'utilisation</h1>
         <div class="wrapper mx-1">
@@ -29,9 +29,9 @@
               <div class="col">
                 <section class="article_1">
                   <div class="card">
-                    <div class="card-header">Article n°1</div>
+                    <h2 class="card-header">Article n°1</h2>
                     <div class="card-body">
-                      <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
+                      <p class="card-text ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
                       Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
                       Maiores repellendus praesentium nostrum quibusdam optio, architecto minima. Voluptatum atque obcaecati expedita officia adtempora eos iure fuga temporibus, aliquam eum, sint beatae alias repudiandae molestias itaque blanditiis quaerat nostrum.
                       Vel, ut! Magni delectus aperiam dicta dolorum doloribus molestias vel eveniet, optio tenetur quae illum culpa autem iustocupiditate quis? Tenetur aperiam odit deleniti asperiores harum eligendi! Possimus, quae temporibus.
@@ -46,7 +46,7 @@
               <div class="col">
                 <section class="article_2">
                   <div class="card">
-                    <div class="card-header">Article n°2</div>
+                    <h2 class="card-header">Article n°2</h2>
                     <div class="card-body">
                       <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
                       Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
@@ -63,7 +63,7 @@
               <div class="col">
                 <section class="article_3">
                   <div class="card">
-                    <div class="card-header">Article n°3</div>
+                    <h2 class="card-header">Article n°3</h2>
                     <div class="card-body">
                       <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
                       Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
@@ -80,7 +80,7 @@
               <div class="col">
                 <section class="article_4">
                   <div class="card">
-                    <div class="card-header">Article n°4</div>
+                    <h2 class="card-header">Article n°4</h2>
                     <div class="card-body">
                       <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
                       Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
