modification footer size for media desktop

--- a/Index/contact.html
+++ b/Index/contact.html
@@ -178,7 +178,7 @@
       </div>
     </main>
   </div>
-  <footer class="footer bg-dark text-light">
+  <footer class="footer bg-dark text-light" id="footer_contact_page">
     <div class="container text-center">
       <div class="row">
         <div class="col-12 pt-1">
