correction file scss, check in progress

--- a/Index/conditions.html
+++ b/Index/conditions.html
@@ -92,6 +92,74 @@
                 </section>
               </div>
             </div>            
+            <!--article 5-->
+            <div class="row"> 
+              <div class="col">
+                <section class="article_5">
+                  <div class="card">
+                    <h2 class="card-header">Article n°5</h2>
+                    <div class="card-body">
+                      <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
+                      Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
+                      Maiores repellendus praesentium nostrum quibusdam optio, architecto minima. Voluptatum atque obcaecati expedita officia adtempora eos iure fuga temporibus, aliquam eum, sint beatae alias repudiandae molestias itaque blanditiis quaerat nostrum.
+                      Vel, ut! Magni delectus aperiam dicta dolorum doloribus molestias vel eveniet, optio tenetur quae illum culpa autem iustocupiditate quis? Tenetur aperiam odit deleniti asperiores harum eligendi! Possimus, quae temporibus.
+                      Reiciendis, enim necessitatibus? Sit, ipsa corrupti. Consequatur tenetur quaerat recusandae deserunt laborum omnis sed veniamquia. Beatae officia eveniet, magnam omnis quo atque, velit at, quos quod ipsam totam laudantium?</p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>            
+            <!--article 6-->
+            <div class="row"> 
+              <div class="col">
+                <section class="article_6">
+                  <div class="card">
+                    <h2 class="card-header">Article n°6</h2>
+                    <div class="card-body">
+                      <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
+                      Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
+                      Maiores repellendus praesentium nostrum quibusdam optio, architecto minima. Voluptatum atque obcaecati expedita officia adtempora eos iure fuga temporibus, aliquam eum, sint beatae alias repudiandae molestias itaque blanditiis quaerat nostrum.
+                      Vel, ut! Magni delectus aperiam dicta dolorum doloribus molestias vel eveniet, optio tenetur quae illum culpa autem iustocupiditate quis? Tenetur aperiam odit deleniti asperiores harum eligendi! Possimus, quae temporibus.
+                      Reiciendis, enim necessitatibus? Sit, ipsa corrupti. Consequatur tenetur quaerat recusandae deserunt laborum omnis sed veniamquia. Beatae officia eveniet, magnam omnis quo atque, velit at, quos quod ipsam totam laudantium?</p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>            
+            <!--article 7-->
+            <div class="row"> 
+              <div class="col">
+                <section class="article_7">
+                  <div class="card">
+                    <h2 class="card-header">Article n°7</h2>
+                    <div class="card-body">
+                      <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
+                      Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
+                      Maiores repellendus praesentium nostrum quibusdam optio, architecto minima. Voluptatum atque obcaecati expedita officia adtempora eos iure fuga temporibus, aliquam eum, sint beatae alias repudiandae molestias itaque blanditiis quaerat nostrum.
+                      Vel, ut! Magni delectus aperiam dicta dolorum doloribus molestias vel eveniet, optio tenetur quae illum culpa autem iustocupiditate quis? Tenetur aperiam odit deleniti asperiores harum eligendi! Possimus, quae temporibus.
+                      Reiciendis, enim necessitatibus? Sit, ipsa corrupti. Consequatur tenetur quaerat recusandae deserunt laborum omnis sed veniamquia. Beatae officia eveniet, magnam omnis quo atque, velit at, quos quod ipsam totam laudantium?</p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>            
+            <!--article 8-->
+            <div class="row"> 
+              <div class="col">
+                <section class="article_8">
+                  <div class="card">
+                    <h2 class="card-header">Article n°8</h2>
+                    <div class="card-body">
+                      <p class="card-text text-justify">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi atque ex praesentium placeat quod necessitatibus minima ipsum maxime officiis? Reiciendis voluptates dolores quia molestiae omnis excepturi impedit alias a fuga.
+                      Error est quasi eos optio, eius vitae earum beatae dicta quo obcaecati iure! Vero sed eaque quod? Rem pariatur tenetur nostrum,voluptatem quidem laudantium perspiciatis ipsa qui dolore fugiat quis?
+                      Maiores repellendus praesentium nostrum quibusdam optio, architecto minima. Voluptatum atque obcaecati expedita officia adtempora eos iure fuga temporibus, aliquam eum, sint beatae alias repudiandae molestias itaque blanditiis quaerat nostrum.
+                      Vel, ut! Magni delectus aperiam dicta dolorum doloribus molestias vel eveniet, optio tenetur quae illum culpa autem iustocupiditate quis? Tenetur aperiam odit deleniti asperiores harum eligendi! Possimus, quae temporibus.
+                      Reiciendis, enim necessitatibus? Sit, ipsa corrupti. Consequatur tenetur quaerat recusandae deserunt laborum omnis sed veniamquia. Beatae officia eveniet, magnam omnis quo atque, velit at, quos quod ipsam totam laudantium?</p>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>            
           </article>
           <div id="scroll_to_top">
             <a href="#top"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-square-fill" viewBox="0 0 16 16">
