--- a/Index/contact.html
+++ b/Index/contact.html
@@ -142,7 +142,7 @@
                         </div>
                         <div class="form-group col-11 m-auto">
                           <label for="FormControlContactMessage">Message</label>
-                          <textarea class="form-control" id="FormControlContactMessage" rows="3"></textarea>                
+                          <textarea class="form-control" id="FormControlContactMessage" rows="3 row-lg-5"></textarea>                
                         </div>
                         <div class="form-group col-8 m-auto">
                           <div class="form-check form-check-inline col-6">
