09 - correction error css

--- a/Index/club.html
+++ b/Index/club.html
@@ -159,8 +159,9 @@
                     <h2 class="card-header">Modification du club</h2>
                     <div class="card-body mt-2 pt-2">
                       <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
-                      <p class="card-text text-decoration-underline"><strong>Tarif adhésion club</strong>:</p>
-                      <p class="card-text"><mark><strong> 20€</strong></mark> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
+                      <p class="card-text text-decoration-underline"><strong>Tarif adhésion club
+                      </strong>:</p>
+                      <p class="card-text"><strong><mark>20€</mark></strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
                       <p class="card-text"> Concernant le challenge UFOLEP vous trouverez toutes les informations sur le site
                         <a href="http://www.ufocross.caubet.eu/"> Ufocross.</a>
                       </p>
