--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -178,34 +178,37 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="join_modal_label"> Participer à l'évènement en tant que Bénévole</h5>
+                          <h5 class="modal-title" id="join_modal_label_management"> Participer à l'évènement en tant que Bénévole</h5>
                         </div>
                         <div class="modal-body">
                           <form>
                             <div class="form-group">
-                              <label for="management_name">Nom</label>
-                              <input type="text" class="form-control" name="name" id="management_name" placeholder="Dupont">
+                              <label for="name">Nom</label>
+                              <input type="text" class="form-control" id="management_name" name="name" placeholder="Dupont">
                             </div>
                             <div class="form-group">
-                              <label for="management_surname">Prénom</label>
-                              <input type="text" class="form-control" name="surname" id="management_surname" placeholder="François">
+                              <label for="surname">Prénom</label>
+                              <input type="text" class="form-control" id="management_surname" name="surname" placeholder="François">
                             </div>
                             <div class="form-group">
-                              <label for="email_management" class="form-label">Adresse e-mail</label>
-                              <div class="input-group" >
-                                <span class="input-group-text">@</span>
-                                <input type="email" class="form-control" aria-describedby="email_management" id="email_management" required placeholder="françois_dupont@moto.fr">
+                              <label for="mail" class="form-label">Adresse e-mail</label>
+                              <div class="input-group has-validation">
+                                <span class="input-group-text" id="input_management_group">@</span>
+                                <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required placeholder="françois_dupont@moto.fr">
+                                <div class="invalid-feedback">
+                                  Veuillez rentrer une adresse mail valide
+                                </div>
                               </div>
                             </div>
                             <div class="form-group">
-                              <label for="management_message">Message</label>
-                            <textarea class="form-control" name="message" id="management_message" rows="3"></textarea>
+                              <label for="message">Message</label>
+                            <textarea class="form-control" name="management_message" id="message" rows="3"></textarea>
                             </div>
                           </form>
                         </div>
                         <div class="modal-footer">
-                        <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal">Fermer</button>
-                        <button type="button" class="btn btn_left btn-success m-auto">Participer</button>
+                        <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal" id="management_abort">Fermer</button>
+                        <button type="button" class="btn btn_left btn-success m-auto" id="management_validation">Participer</button>
                         </div>
                       </div>
                     </div>
@@ -215,30 +218,30 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header ">
-                          <h5 class="modal-title"> Participer à l'évènement en tant que Pilote</h5>
+                          <h5 class="modal-title" id="join_modal_label_pilot"> Participer à l'évènement en tant que Pilote</h5>
                         </div>
                         <div class="modal-body">
                           <form>
                             <div class="form-group">
-                              <label for="pilot_name">Nom</label>
-                              <input type="text" class="form-control" name="name" id="pilot_name" placeholder="Dupont">
+                              <label for="name">Nom</label>
+                              <input type="text" class="form-control" id="pilot_name" name="name" placeholder="Dupont">
                             </div>
                             <div class="form-group">
-                              <label for="pilot_surname">Prénom</label>
-                              <input type="text" class="form-control" name="surname" id="pilot_surname" placeholder="François">
+                              <label for="surname">Prénom</label>
+                              <input type="text" class="form-control" id="pilot_surname" name="surname" placeholder="François">
                             </div>
                             <div class="form-group">
-                              <label for="email_pilot" class="form-label">Adresse e-mail</label>
-                              <div class="input-group">
-                                <span class="input-group-text">@</span>
-                                <input type="email" class="form-control" aria-describedby="email_pilot" id="email_pilot" required placeholder="françois_dupont@moto.fr">
+                              <label for="mail" class="form-label">Adresse e-mail</label>
+                              <div class="input-group has-validation">
+                                <span class="input-group-text" id="input_pilot_group">@</span>
+                                <input type="text" class="form-control" id="pilot_mail" aria-describedby="inputGroupPrepend" required   placeholder="françois_dupont@moto.fr">
                                 <div class="invalid-feedback">
                                   Veuillez rentrer une adresse mail valide
                                 </div>
                               </div>
                             </div>
                             <div class="form-group">
-                            <label for="pilot_message">Message</label>
+                            <label for="message">Message</label>
                             <textarea class="form-control" name="message" id="pilot_message" rows="3"></textarea>
                             </div>
                           </form>
@@ -256,8 +259,8 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal">Fermer</button>
-                          <button type="button" class="btn btn_left btn-success m-auto" >Participer</button>
+                          <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal" id="pilot_abort">Fermer</button>
+                          <button type="button" class="btn btn_left btn-success m-auto" id="pilot_validation">Participer</button>
                         </div>
                       </div>
                     </div>
