--- a/Index/club.html
+++ b/Index/club.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/Style/style.css">
 
 
   <title>Amicale Motos Cyclos Occitanie</title>
@@ -109,7 +109,7 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
-                <ul class="dropdown-menu  pt-0" id="dropdown_archives">
+                <ul class="dropdown-menu  pt-0" id="dropdown_menu_archives">
                   <li><a class="dropdown-item text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
                   <li><a class="dropdown-item text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
@@ -122,10 +122,10 @@
                 <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" width="130" height="60"></a> 
               </div>
               <div class="col">  
-                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg"width="130" height="60"></a> 
+                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" width="130" height="60"></a> 
               </div>
               <div class="col">
-                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg"width="130" height="60"></a> 
+                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" width="130" height="60"></a> 
               </div>
             </div>
           </div>
@@ -159,8 +159,9 @@
                     <h2 class="card-header">Modification du club</h2>
                     <div class="card-body mt-2 pt-2">
                       <p class="card-text">Suite à l'AG extraordinaire l'association à été scindée en 2 parties distinctes mais complémentaire, avec 2 bureaux différents d'où les 2 appellations.</p>
-                      <p class="card-text text-decoration-underline"><strong>Tarif adhésion club</strong>:</p>
-                      <p class="card-text"><strong><mark> 20€</strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
+                      <p class="card-text text-decoration-underline"><strong>Tarif adhésion club
+                      </strong>:</p>
+                      <p class="card-text"><strong><mark>20€</mark></strong> que ça soit FFM ou UFOLEP, une seule cotisation club si le pilote prends les 2 licences dans la même entité.</p>
                       <p class="card-text"> Concernant le challenge UFOLEP vous trouverez toutes les informations sur le site
                         <a href="http://www.ufocross.caubet.eu/"> Ufocross.</a>
                       </p>
@@ -222,7 +223,7 @@
         <div class="col-6">
           <div class="contact text-center">
             <span>Retrouvez-nous sur :</span>
-            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png" width="16" height="16">
             </a> 
           </div>
         </div>
