--- a/Index/conditions.html
+++ b/Index/conditions.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/Style/style.css">
 
   <title>Amicale Motos Cyclos Occitanie</title>
   <meta name="description" content="Retrouvez toutes les conditions particulière d'utilisation du site officiel de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
@@ -177,7 +177,7 @@
         <div class="col-6">
           <div class="contact text-center">
             <span>Retrouvez-nous sur :</span>
-            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png" width="16" height="16">
             </a> 
           </div>
         </div>
