--- a/Index/contact.html
+++ b/Index/contact.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/Style/style.css">
   <title>Amicale Motos Cyclos Occitanie</title>
   <meta name="description" content="formulaire de contact de l'Amicale Motos Cyclos Occitanie , une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
@@ -81,10 +81,10 @@
                 <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" width="130" height="60"></a> 
               </div>
               <div class="col">  
-                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg"width="130" height="60"></a> 
+                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" width="130" height="60"></a> 
               </div>
               <div class="col">
-                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg"width="130" height="60"></a> 
+                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" width="130" height="60"></a> 
               </div>
             </div>
           </div>
@@ -184,7 +184,7 @@
         <div class="col-12 pt-1">
           <div class="contact">
             <span>Retrouvez-nous sur :</span>
-            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+            <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895 " target="blank"><img src="/Annexe/Images/Icone/Facebook.png" width="16" height="16">
             </a> 
           </div>
         </div>
@@ -200,3 +200,4 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
+</html>
