--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/Style/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="/Style/style.css">
   <title>Amicale Motos Cyclos Occitanie</title>
   <meta name="description" content="Retrouvez tous les évènements organisés par les membres de l'équipe de l'Amicale Motos Cyclos Occitanie. Une association de Moto-cross et Vélo basée dans l'Ariège"/>
 </head>
@@ -107,7 +107,7 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-expanded="false"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-archive" viewBox="0 0 16 16">
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
-                <ul class="dropdown-menu pt-0" id="dropdown_archives">
+                <ul class="dropdown-menu pt-0" id="dropdown_menu_archives">
                   <li><a class="dropdown-item text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
                   <li><a class="dropdown-item text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
@@ -120,10 +120,10 @@
                 <a href="https://www.ufolep.org/" target="blank"><img src="/Annexe/Images/Affiliation/ufolep.png" width="130" height="60"></a> 
               </div>
               <div class="col">  
-                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg"width="130" height="60"></a> 
+                <a href="https://www.ffmoto.org/" target="blank"><img src="/Annexe/Images/Affiliation/logo-FFM.jpg" alt="" width="130" height="60"></a> 
               </div>
               <div class="col">
-                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg"width="130" height="60"></a> 
+                <a href="https://www.lmoc.fr/" target="blank"><img src="/Annexe/Images/Affiliation/Lmoc.jpg" alt="" width="130" height="60"></a> 
               </div>
             </div>
           </div>
@@ -179,22 +179,22 @@
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
-                          <h5 class="modal-title" id="join_modal_label"> Participer à l'évènement en tant que Bénévole</h5>
+                          <h5 class="modal-title" id="join_modal_label_management"> Participer à l'évènement en tant que Bénévole</h5>
                         </div>
                         <div class="modal-body">
                           <form>
                             <div class="form-group">
                               <label for="name">Nom</label>
-                              <input type="text" class="form-control" id="name" name="name" placeholder="Dupont">
+                              <input type="text" class="form-control" id="management_name" name="name" placeholder="Dupont">
                             </div>
                             <div class="form-group">
                               <label for="surname">Prénom</label>
-                              <input type="text" class="form-control" id="surname" name="surname" placeholder="François">
+                              <input type="text" class="form-control" id="management_surname" name="surname" placeholder="François">
                             </div>
                             <div class="form-group">
                               <label for="mail" class="form-label">Adresse e-mail</label>
                               <div class="input-group has-validation">
-                                <span class="input-group-text" id="inputGroupPrepend">@</span>
+                                <span class="input-group-text" id="input_management_group">@</span>
                                 <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required placeholder="françois_dupont@moto.fr">
                                 <div class="invalid-feedback">
                                   Veuillez rentrer une adresse mail valide
@@ -203,40 +203,40 @@
                             </div>
                             <div class="form-group">
                               <label for="message">Message</label>
-                            <textarea class="form-control" name="message" id="message" rows="3"></textarea>
+                            <textarea class="form-control" name="management_message" id="message" rows="3"></textarea>
                             </div>
                           </form>
                         </div>
                         <div class="modal-footer">
-                        <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal" id="abort">Fermer</button>
-                        <button type="button" class="btn btn_left btn-success m-auto" id="validation">Participer</button>
+                        <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal" id="management_abort">Fermer</button>
+                        <button type="button" class="btn btn_left btn-success m-auto" id="management_validation">Participer</button>
                         </div>
                       </div>
                     </div>
 
                   </div>
-                  <!-- Pilote participation modal -->
+                  <!-- Pilot participation modal -->
                   <div class="modal fade" id="join_pilote" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header ">
-                          <h5 class="modal-title" id="join_modal_label"> Participer à l'évènement en tant que Pilote</h5>
+                          <h5 class="modal-title" id="join_modal_label_pilot"> Participer à l'évènement en tant que Pilote</h5>
                         </div>
                         <div class="modal-body">
                           <form>
                             <div class="form-group">
                               <label for="name">Nom</label>
-                              <input type="text" class="form-control" id="name" name="name" placeholder="Dupont">
+                              <input type="text" class="form-control" id="pilot_name" name="name" placeholder="Dupont">
                             </div>
                             <div class="form-group">
                               <label for="surname">Prénom</label>
-                              <input type="text" class="form-control" id="surname" name="surname" placeholder="François">
+                              <input type="text" class="form-control" id="pilot_surname" name="surname" placeholder="François">
                             </div>
                             <div class="form-group">
                               <label for="mail" class="form-label">Adresse e-mail</label>
                               <div class="input-group has-validation">
-                                <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                <input type="text" class="form-control" id="mail" aria-describedby="inputGroupPrepend" required   placeholder="françois_dupont@moto.fr">
+                                <span class="input-group-text" id="input_pilot_group">@</span>
+                                <input type="text" class="form-control" id="pilot_mail" aria-describedby="inputGroupPrepend" required   placeholder="françois_dupont@moto.fr">
                                 <div class="invalid-feedback">
                                   Veuillez rentrer une adresse mail valide
                                 </div>
@@ -244,7 +244,7 @@
                             </div>
                             <div class="form-group">
                             <label for="message">Message</label>
-                            <textarea class="form-control" name="message" id="message" rows="3"></textarea>
+                            <textarea class="form-control" name="message" id="pilot_message" rows="3"></textarea>
                             </div>
                           </form>
                           <div class="form-check form-check-inline" id="pilote">
@@ -261,8 +261,8 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal" id="abort">Fermer</button>
-                          <button type="button" class="btn btn_left btn-success m-auto" id="validation">Participer</button>
+                          <button type="button" class="btn btn_left btn-danger m-auto " data-dismiss="modal" id="pilot_abort">Fermer</button>
+                          <button type="button" class="btn btn_left btn-success m-auto" id="pilot_validation">Participer</button>
                         </div>
                       </div>
                     </div>
@@ -355,7 +355,7 @@
           <div class="col-6">
             <div class="contact text-center">
               <span>Retrouvez-nous sur :</span>
-              <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png"width="16" height="16">
+              <a href="https://www.facebook.com/AMCO-Amicale-Moto-Cyclo-Occitanie-106697515109895" target="blank"><img src="/Annexe/Images/Icone/Facebook.png" width="16" height="16">
               </a> 
             </div>
           </div>
