--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -112,8 +112,8 @@
                 <path d="M0 2a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1v7.5a2.5 2.5 0 0 1-2.5 2.5h-9A2.5 2.5 0 0 1 1 12.5V5a1 1 0 0 1-1-1V2zm2 3v7.5A1.5 1.5 0 0 0 3.5 14h9a1.5 1.5 0 0 0 1.5-1.5V5H2zm13-3H1v2h14V2zM5 7.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z"/>
                 </svg> Archives</a>
                 <ul class="dropdown-menu pt-0" id="dropdown_menu_archives">
-                  <li><a class="dropdown-item text-center" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
-                  <li><a class="dropdown-item text-center" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
+                  <li><a class="dropdown-item" href="/Index/Archives/2016-2018.html">2016 - 2018</a></li>
+                  <li><a class="dropdown-item" href="/Index/Archives/2011-2015.html">2011 - 2015</a></li>
                 </ul>
             </li>
         </ul>
@@ -168,7 +168,7 @@
                       </p>
                       <p class="card-text text-center mt-3 ">
                         <strong>Venez nous rejoindre !!!</strong>
-                        <a href="/Index/evenement.html"><img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" alt="" height="30" width="30">  
+                        <a href="/Index/evenement.html"><img src="https://previews.123rf.com/images/madorf/madorf1505/madorf150500003/40015484-rosso-clicca-qui-pulsante-con-bordo-cromato-e-riflessioni-illustrazione-su-sfondo-bianco.jpg" height="30" width="30">  
                         </a>
                       </p>
                     </div>
