--- a/Index/evenement.html
+++ b/Index/evenement.html
@@ -214,7 +214,7 @@
                     </div>
                   </div>
                   <!-- Pilot participation modal -->
-                  <div class="modal fade" id="join_pilote" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
+                  <div class="modal fade" id="join_pilot" tabindex="-1" role="dialog" aria-labelledby="join_modal_label" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header ">
