correction footer width size

--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -197,7 +197,7 @@
     </main>
    <!--FOOTER-->
     <footer class="footer container-fluid bg-dark text-light">
-      <div class="container pt-2">
+      <div class="container">
         <div class="row d-flex">
           <div class="col-6">
             <div class="contact text-center">
