--- a/Index/accueil.html
+++ b/Index/accueil.html
@@ -18,7 +18,7 @@
         <img src="../Annexe/Images/Bannière.jpg" alt="responsive bannière" class="img-fluid" id="bannière_mobile">
       </div>
       <div class="second_banniere">
-        <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid ">
+        <img src="../Annexe/Images/Compo4.jpg" alt="bannière_2" class="img-fluid">
       </div>
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark" id="Nav">
@@ -164,7 +164,7 @@
                     </h2>
                     <div class="card-body">
                       <h6 class="card-title w-50">Rencontre sportive</h6>
-                      <p class="card-text mb-0 mt-3">L'Amicale Moto Cyclo Occitanie organise un grand évènement cet été et vous invite à nous rejoindre pour un moment sportif et festive.
+                      <p class="card-text mb-0 mt-3">L'Amicale Moto Cyclo Occitanie organise un grand évènement en <u><strong>Juillet 2023</strong></u> et l'ensemble de l'équipe du club vous invite à nous rejoindre pour ce moment à la fois sportif et festif.
                       </p>
                       <p class="card-text text-center mt-3 ">
                         <strong>Venez nous rejoindre !!!</strong>
